--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "packageManager": "pnpm@10.26.2",
   "devDependencies": {
+    "vite": "^7.3.1",
     "vitepress": "2.0.0-alpha.15"
   },
   "dependencies": {
